partial dlinkedlist and completed arraystack and liststack